crates/guicons-build/src/snapshots/guicons_build__generate__tests__family_with_variants_only_is_a_two_tier_builder.snap
---
source: crates/guicons-build/src/generate.rs
expression: generate_builders(&icons)
---
pub struct SettingsBuilder;

pub const fn settings() -> SettingsBuilder {
    SettingsBuilder
}

impl SettingsBuilder {
    pub const fn filled(self) -> IconKey {
        keys::SETTINGS_FILLED
    }
    pub const fn regular(self) -> IconKey {
        keys::SETTINGS_REGULAR
    }
}
