crates/guicons-build/src/snapshots/guicons_build__generate__tests__sizeless_icon_sharing_a_family_with_sized_ones_gets_a_default_method.snap
---
source: crates/guicons-build/src/generate.rs
expression: generate_builders(&icons)
---
pub struct Settings24VariantBuilder;

impl Settings24VariantBuilder {
    pub const fn filled(self) -> IconKey {
        keys::SETTINGS_24_FILLED
    }
}

pub struct SettingsBuilder;

pub const fn settings() -> SettingsBuilder {
    SettingsBuilder
}

impl SettingsBuilder {
    pub const fn default(self) -> IconKey {
        keys::SETTINGS
    }
    pub const fn size_24(self) -> Settings24VariantBuilder {
        Settings24VariantBuilder
    }
}
